// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gets the correct status for each parent post 1`] = `
Object {
  "tom-hanks": "complete",
}
`;

exports[`gets the correct status for each parent post 2`] = `
Object {
  "olivia-wilde": "low-priority",
}
`;
